<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_player__nb"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.leonardo.sportquiz.Player_NBA"
    android:background= "@android:color/background_dark">

    <TextView
        android:text="@string/questionplayer1"
        android:layout_height="wrap_content"
        android:id="@+id/domanda1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:textSize="18sp" />

    <TextView
        android:text="@string/questionplayer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/domanda2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_marginTop="110dp"
        android:textSize="18sp" />

    <TextView
        android:text="@string/questionplayer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/domanda3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_marginTop="200dp"
        android:textSize="18sp" />

    <TextView
        android:text="@string/questionplayer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/domanda4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_marginTop="300dp"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/domanda4"
        android:layout_alignParentStart="true">


        <RadioButton android:id="@+id/rfalse4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_name"
            android:onClick="onRadioButtonClicked"
            android:layout_marginEnd="38dp"
            app:buttonTint="@android:color/holo_red_light" />

        <RadioButton android:id="@+id/rtrue4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_name"
            android:onClick="onRadioButtonClicked"
            android:layout_marginStart="31dp"
            app:buttonTint="@android:color/holo_green_dark" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/domanda2"
        android:layout_alignParentStart="true">


        <RadioButton android:id="@+id/rfalse2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_name"
            android:onClick="onRadioButtonClicked"
            android:layout_marginEnd="38dp"
            app:buttonTint="@android:color/holo_red_light" />

        <RadioButton android:id="@+id/rtrue2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_name"
            android:onClick="onRadioButtonClicked"
            android:layout_marginStart="31dp"
            android:checked="false"
            android:duplicateParentState="false"
            app:buttonTint="@android:color/holo_green_dark" />

    </RadioGroup>

    <RadioGroup
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:orientation="horizontal"
   android:layout_marginTop="11dp"
        android:layout_below="@+id/domanda1"
        android:layout_alignParentStart="true">


   <RadioButton
       android:id="@+id/rfalse1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/false_name"
       android:onClick="onRadioButtonClicked"
       android:layout_marginEnd="38dp"
       style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
       app:buttonTint="@android:color/holo_red_light" />

        <RadioButton
            android:id="@+id/rtrue1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_name"
            android:onClick="onRadioButtonClicked"
            android:layout_marginStart="31dp"
            app:buttonTint="@android:color/holo_green_dark" />

    </RadioGroup>

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="21dp"
        android:id="@+id/buttonExit1"

        android:background="@android:color/darker_gray"
        android:visibility="visible"
        android:text="Completato"
        android:onClick="checkAnswer"
        android:textAppearance="@android:style/TextAppearance.Medium.Inverse"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/domanda3"
        android:layout_alignParentStart="true">


        <RadioButton android:id="@+id/rfalse3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_name"
            android:onClick="onRadioButtonClicked"
            android:layout_marginEnd="38dp"
            app:buttonTint="@android:color/holo_red_light" />

        <RadioButton android:id="@+id/rtrue3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_name"
            android:onClick="onRadioButtonClicked"
            android:layout_marginStart="31dp"
            app:buttonTint="@android:color/holo_green_dark" />

    </RadioGroup>


</RelativeLayout>
